# uam

./: README.md
robot_urdf/: CMakeLists.txt  package.xml  uam_urdf.rviz  uav_urdf.rviz  urdf.rviz
robot_urdf/launch/: display.launch  display_uam.launch  display_uav.launch  gazebo.launch
robot_urdf/meshes/: base_link.STL  end_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  uav800.STL  uav800_big.STL  uav800_middle.STL  uav800_small.STL
robot_urdf/urdf/: robot_urdf (init).urdf  robot_urdf.csv  robot_urdf.urdf  robot_urdf_stillsuccess.urdf  robot_urdf_success.urdf  test uam_urdf.urdf  uam_urdf.urdf  uam_urdf2.urdf  uav2.urdf  uav_urdf.urdf
uam_arm/: CMakeLists.txt  package.xml
uam_arm/cfg/: uam_cfg.cfg
uam_arm/launch/: AutoTRACIK.launch  AutoTRACIK_vicon.launch  HololensAuto.launch  arm_joy.launch  mavros_start.launch  test_servo.launch  uav.launch
uam_arm/script/: test.py  uav_pose.py  vehicle_attitude.csv  vehicle_local_position.csv
uam_arm/src/: HololensServer.cpp  Joystick_node.cpp  KeyboardTeleopNode.cpp  TRACIKsolver.cpp  drone_tf_broadcaster.cpp  ftServo.cpp  ftServo.h  ftServo_new.cpp  ik_test.cpp  test_servo.cpp
uam_urdf/: CMakeLists.txt  package.xml
uam_urdf/config/: robot_gazebo_control.yaml
uam_urdf/launch/: display.launch  displayRviz.launch
uam_urdf/meshes/: 1.STL  2.STL  3.STL  4.STL  Joint1.STL  Joint1_rot.stl  Joint2.STL  base1.STL  gouzi1.stl  grasp.STL  非中空关节.STL
uam_urdf/meshes/modular_joint/: 1.STL  2.STL  3.STL  base.stl  joint.STL
uam_urdf/meshes/smc/: joint1.stl  joint2.stl  liangan1.stl  liangan2.stl  liangan3.stl
uam_urdf/meshes/uav/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
uam_urdf/meshes/uav2/: link0.STL  link1.STL  link3.STL  link4.STL  link5.STL
uam_urdf/urdf/: uav1.urdf  uav2.urdf
viconros/: CMakeLists.txt  README.md
viconros/UAM_log/: load100_re_goto_01ok.csv  load100x0-0_40y0ok.csv  load100x0_14y0z0_20-0_50ok.csv  load100x0_3y+-0_30ok.csv  load100x0_3y0_15z0-0_40ok.csv  log_20191203_19_07_33.csv  log_20191203_19_27_22.csv  log_20191203_19_29_57.csv  log_20191203_19_34_44.csv  log_20191203_19_40_21.csv  log_20191203_21_19_35.csv  log_20191203_21_42_13.csv  log_20191203_22_28_17.csv  log_20191203_22_43_56.csv  log_20191203_23_01_41.csv  re_goto_01.csv  re_goto_01ok.csv  re_goto_02ok.csv  re_goto_03ok.csv  re_goto_04ok.csv  re_goto_05ok.csv  x0-0_40y-0_15ok.csv  x0-0_40y0_15ok.csv  x0-0_40y0ok.csv  x0_14y0z0_20-0_50ok.csv  x0_2y+-0_35ok.csv  x0_3y+-0_30ok.csv  x0_3y-0_15z0-0_40ok.csv  x0_3y0_15z0-0_40ok.csv  x0_4Y+-0_25ok.csv
viconros/cfg/: uam_test_cfg.cfg  vicon_cfg.cfg
viconros/launch/: arm_test.launch  quadrotor.launch  unit.launch  unit300.launch  unit_uam.launch  unitnpy.launch
viconros/msg/: viconmocap.msg
viconros/src/: CFetchViconData.cpp  CFetchViconData.cpp~  CFetchViconData.h  CFetchViconData.h~  GetViconData.cpp  viconros.cpp  viconros.cpp~  viconros_arm_test.cpp  viconros_uam.cpp
